changing property names and default branch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=my-config
-spring.profiles.active=uat
-#spring.cloud.config.enabled=false
+spring.profiles.active=default
 spring.config.import=configserver:http://localhost:8081
 management.endpoints.web.exposure.include=*
 management.endpoints.web.base-path=/monitor
