--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=my-config
-spring.profiles.active=default
+#spring.profiles.active=uat
+spring.cloud.config.label=uat
 spring.config.import=configserver:http://localhost:8081
 management.endpoints.web.exposure.include=*
-management.endpoints.web.base-path=/monitor
+#management.endpoints.web.base-path=/monitor
